--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,9 +14,12 @@
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.18.0",
     "@tanstack/react-query": "^5.59.0",
+    "@tiasas/core": "workspace:*",
+    "@tiasas/database": "workspace:*",
+    "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "^14.2.10",
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
