--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,9 @@
     "private": true,
     "main": "index.ts",
     "types": "index.ts",
+    "scripts": {
+        "test": "vitest"
+    },
     "dependencies": {
         "@tiasas/database": "workspace:*",
         "bcryptjs": "^3.0.3",
@@ -14,6 +17,7 @@
     "devDependencies": {
         "@types/bcryptjs": "^3.0.0",
         "@types/node": "^20.11.30",
-        "typescript": "^5.6.3"
+        "typescript": "^5.6.3",
+        "vitest": "^2.1.3"
     }
 }
