--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,7 @@
         "bcryptjs": "^3.0.3",
         "date-fns": "^4.1.0",
         "openai": "^4.0.0",
+        "xlsx": "^0.18.5",
         "zod": "^3.23.8"
     },
     "devDependencies": {
